--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
-    <com.seavenheaven.iosswitch.ShSwitchView android:id="@+id/switch_view" android:layout_width="60dip"
-        android:layout_height="40dip" />
+    <com.seavenheaven.iosswitch.ShSwitchView
+        xmlns:shSwitch="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/switch_view"
+        android:layout_width="60dip"
+        android:layout_height="40dip"
+        shSwitch:tintColor="#FF0099CC"/>
 
 </RelativeLayout>
