--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
 
     <com.sevenheaven.iosswitch.ShSwitchView
         xmlns:shSwitch="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/switch_view"
         android:layout_width="90dip"
         android:layout_height="40dip"
         shSwitch:tintColor="#ff62cc2f" />
